--- a/src/styles/helpers/_helpers.scss
+++ b/src/styles/helpers/_helpers.scss
@@ -2,6 +2,14 @@
   display: none;
 }
 
+.text-center{
+	text-align: center;
+}
+
+.white-color{
+	color: #fff;
+}
+
 
 //.mt {
 //  margin-top: 1rem;
