--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,29 +6,254 @@
         <title>Index</title>
         <meta name="theme-color" content="#fff">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-       <!--  <link rel="shortcut icon" href="img/favicons/favicon.ico" type="image/x-icon">
-        <link rel="icon" sizes="16x16" href="img/favicons/favicon-16x16.png" type="image/png">
-        <link rel="icon" sizes="32x32" href="img/favicons/favicon-32x32.png" type="image/png">
-        <link rel="apple-touch-icon-precomposed" href="img/favicons/apple-touch-icon-precomposed.png">
-        <link rel="apple-touch-icon" href="img/favicons/apple-touch-icon.png">
-        <link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-touch-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="img/favicons/apple-touch-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="img/favicons/apple-touch-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="img/favicons/apple-touch-icon-76x76.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="img/favicons/apple-touch-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="img/favicons/apple-touch-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="img/favicons/apple-touch-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="img/favicons/apple-touch-icon-152x152.png">
-        <link rel="apple-touch-icon" sizes="167x167" href="img/favicons/apple-touch-icon-167x167.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon-180x180.png">
-        <link rel="apple-touch-icon" sizes="1024x1024" href="img/favicons/apple-touch-icon-1024x1024.png"> -->
-        <link rel="stylesheet" href="styles/main.css">
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	    <link rel="stylesheet" href="styles/main.css">
     </head>
     <body>
-        @@include("../blocks/modules/header/header.html")
-        @@include("../blocks/modules/footer/footer.html")
+        <div class="wrapper">
+            @@include("../blocks/modules/header/header.html")
+			<main class="main">
+				<div class="container">
+					<div class="tile">
+						<div class="tile__row tile__row_main">
+							<div class="tile__list tile__list_square">
+								<div class="tile__col">
+									<a href="#" class="tile__item tile__item_square tile__item_gray tile__item_big text-center">
+										<div class="tile__inner">
+											<div class="tile__title">
+												Выберите товар с повышенным кэшбэком <br>
+												Нажмите кнопку «Посмотреть» - перейдите в карточку товара <br>
+												Положите товар в корзину <br>
+												Оформите заказ
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class="tile__col">
+									<a href="#" class="tile__item tile__item_square tile__item_gray">
+										<div class="tile__inner">
+											<div class="tile__title">
+												Кэшбэк 30%
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class="tile__col">
+									<a href="#" class="tile__item tile__item_square tile__item_gray">
+										<div class="tile__inner">
+											<div class="tile__title">
+												Успей купить!
+											</div>
+										</div>
+									</a>
+								</div>
+							</div>
+						</div>
+						<div class="tile__row tile__row_catalog">
+							<div class="tile__list tile__list_main">
+								<div class="tile__col">
+									<a href="#" class="tile__item">
+										<div class="tile__inner">
+											<div class="tile__title">
+												Электроника
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class="tile__col">
+									<a href="#" class="tile__item">
+										<div class="tile__inner">
+											<div class="tile__title">
+												Бытовая техника
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class="tile__col">
+									<a href="#" class="tile__item">
+										<div class="tile__inner">
+											<div class="tile__title">
+												Детские товары
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class="tile__col">
+									<a href="#" class="tile__item tile__item_pink">
+										<div class="tile__inner">
+											<div class="tile__title">
+												Подарочные наборы
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class="tile__col">
+									<a href="#" class="tile__item tile__item_blue">
+										<div class="tile__inner">
+											<div class="tile__title">
+												Последний шанс!
+											</div>
+										</div>
+									</a>
+								</div>
+							</div>
+						</div>
+						<div class="tile__row tile__row_product">
+							<div class="tile__list tile__list_square tile__list_square-reverse">
+								<div class="tile__col">
+									<a href="#" class="tile__item tile__item_square tile__item_green tile__item_big tile__item_feature">
+										<div class="tile__inner">
+											<div class="feature">
+												<ul class="feature__list">
+													<li class="feature__item">
+														<p>
+															<strong>Тип </strong>
+														</p>
+														<p>
+															Дрель ударная
+														</p>
+													</li>
+													<li class="feature__item">
+														<p>
+															<strong>Бренд </strong>
+														</p>
+														<p>
+															Bosch
+														</p>
+													</li>
+													<li class="feature__item">
+														<p>
+															<strong>Страна-изготовитель </strong>
+														</p>
+														<p>
+															Венгрия
+														</p>
+													</li>
+													<li class="feature__item">
+														<p>
+															<strong>Макс. мощность, Вт</strong>
+														</p>
+														<p>
+															701
+														</p>
+													</li>
+													<li class="feature__item">
+														<p>
+															<strong>Питание</strong>
+														</p>
+														<p>
+															От сети 220В
+														</p>
+													</li>
+													<li class="feature__item">
+														<p>
+															<strong>Гарантия</strong>
+														</p>
+														<p>
+															2 года
+														</p>
+													</li>
+													<li class="feature__item">
+														<p>
+															<strong>Питание</strong>
+														</p>
+														<p>
+															От сети 220В
+														</p>
+													</li>
+													<li class="feature__item">
+														<p>
+															<strong>Упаковка </strong>
+														</p>
+														<p>
+															Пластиковый кейс
+														</p>
+													</li>
+												</ul>
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class="tile__col">
+									<a href="#" class="tile__item tile__item_square tile__item_green">
+										<div class="tile__inner">
+											<div class="tile__title">
+												Понятие модернизации понимает механизм власти
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class="tile__col">
+									<a href="#" class="tile__item tile__item_square tile__item_green tile__item_product">
+										<div class="tile__inner">
+											<div class="tile__title white-color">
+												Время мыть!
+											</div>
+											<div class="tile__bg" style="background-image: url('img/product.png')">
+											</div>
+											<div class="tile__icon">
+												!
+											</div>
+										</div>
+									</a>
+								</div>
+							</div>
+						</div>
+						<div class="tile__row tile__row_other">
+							<div class="tile__list tile__list_main tile__list_main-reverse">
+								<div class="tile__col">
+									<a href="#" class="tile__item tile__item_yellow">
+										<div class="tile__inner">
+											<div class="tile__title">
+												Удивительное рядом
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class="tile__col">
+									<a href="#" class="tile__item tile__item_yellow">
+										<div class="tile__inner">
+											<div class="tile__title">
+												Будь первым!
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class="tile__col">
+									<a href="#" class="tile__item tile__item_light">
+										<div class="tile__inner">
+											<div class="tile__title">
+												Невероятный гений
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class="tile__col">
+									<a href="#" class="tile__item tile__item_yellow">
+										<div class="tile__inner">
+											<div class="tile__title">
+												Супер цены
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class="tile__col">
+									<a href="#" class="tile__item tile__item_red">
+										<div class="tile__inner">
+											<div class="tile__title">
+												Выгодные предложения
+											</div>
+										</div>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				
+			</main>
+	        @@include("../blocks/modules/footer/footer.html")
+        </div>
         <script src="js/main.js"></script>
-<!--        <script src="js/vendor.js"></script>-->
     </body>
 </html>
