--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -10,10 +10,10 @@ body {
     line-height: 1.42;
     -webkit-font-smoothing:antialiased;
     scroll-behavior: smooth;
-    // font-family: 'FugazOne';
+		font-family: 'Lab Grotesque';
     font-weight: normal;
     font-style: normal;
-    color: #000;
+    color: $black;
     background-color: #fff;
 }
 
@@ -45,12 +45,10 @@ input {
     }
 }
 
-h1, h2, h3, h4, h5, h6, {
+h1, h2, h3, h4, h5, h6{
     margin-top: 0;
     padding: 0;
 }
-
-
 
 p {
     margin-top: 0;
@@ -60,4 +58,22 @@ ul {
     list-style-type: none;
     padding: 0;
     margin-top: 0;
+}
+
+
+.wrapper {
+	width: 100%;
+	max-width: 768px;
+	margin-left: auto;
+	margin-right: auto;
+	overflow: hidden;
+}
+
+
+
+@media only screen and (min-width: 480px) {
+	.container{
+		padding-left: 12px;
+		padding-right: 12px;
+	}
 }
